--- a/executive.html
+++ b/executive.html
@@ -176,11 +176,11 @@
     <div class="menu">
         <div class="menu-inner">
             <ul style="text-align:center;" class="menu-list">
-                <li><a class="menu-list__item" href="about_video.html"><span style="color:#1b254f">W</span>ho we are?</span></a></li>
-                <li><a class="menu-list__item" href="whatwedo.html"><span style="color:#1b254f">W</span>hat we do?</span></a></li>
-                <li><a class="menu-list__item" href="#"><span style="color:#1b254f">H</span>ow we work?</span></a></li>
-                <li><a class="menu-list__item" href="speak.html"><span style="color:#1b254f">W</span>hy Choose us?</span></a></li>
-                <li><a class="menu-list__item" href="contact.html"><span  style="color:#1b254f">L</span>ets Interact</span></a></li>
+                <li><a class="menu-list__item" href="about_video.html"><span style="color:#1b254f">WHO</span> we are?</span></a></li>
+                <li><a class="menu-list__item" href="whatwedo.html"><span style="color:#1b254f">WHAT</span> we do?</span></a></li>
+                <li><a class="menu-list__item" href="#"><span style="color:#1b254f">HOW</span> we work?</span></a></li>
+                <li><a class="menu-list__item" href="speak.html"><span style="color:#1b254f">WHY</span> choose us?</span></a></li>
+                <li><a class="menu-list__item" href="contact.html"><span  style="color:#1b254f">LETS</span> interact</span></a></li>
                 
             </ul>
         </div>
