--- a/boardconsulting.html
+++ b/boardconsulting.html
@@ -200,7 +200,7 @@
             <ul style="text-align:center;" class="menu-list">
                 <li><a class="menu-list__item" href="about_video.html"><span style="color:#1b254f">WHO</span> we are?</span></a></li>
                 <li><a class="menu-list__item" href="whatwedo.html"><span style="color:#1b254f">WHAT</span> we do?</span></a></li>
-                <li><a class="menu-list__item" href="#"><span style="color:#1b254f">HOW</span> we work?</span></a></li>
+                <li><a class="menu-list__item" href="howwework.html"><span style="color:#1b254f">HOW</span> we work?</span></a></li>
                 <li><a class="menu-list__item" href="speak.html"><span style="color:#1b254f">WHY</span> choose us?</span></a></li>
                 <li><a class="menu-list__item" href="contact.html"><span  style="color:#1b254f">LETS</span> interact</span></a></li>
                 
