images and menu pattern and video

--- a/about_video.html
+++ b/about_video.html
@@ -224,16 +224,8 @@
                 <a style="float:right;" class="btn-link btn-link--circle-right" href="photo_viewer.html"><span>See details<i class="circle circle--right icon-right-open"></i></span></a>
             </div>
         </div>
-        <!-- <div class="row">
-            <div class="col-lg-8">
-                <a href="#" ><button style="float:right;margin-right:30px;margin-top:20px;"  class="button">view more</button></a>
-            </div>
-            <div class="col-lg-4">
-                
-            </div>
-        </div> -->
-
-    </div>
+    </div><div style="padding-top:20px;"></div>
+    <header class="header-page header-fullscreen header-page--gutterBottom  jarallaxVideo" data-jarallax-video="mp4:assets/video/about2.mp4"></header>
     <article class="caption-single container">
         <div class="row">
             <div class="col-12 col-lg-3">
