--- a/whatwedo.html
+++ b/whatwedo.html
@@ -88,7 +88,7 @@
 		    <!-- Project -->
 		    <figure class="item-project item-masonry js-block category-design">
 			    <a href="executive.html" class="onHover">
-				    <img class="item-news__image" src="assets/images/exec-search-thumpnail.jpg" alt="Project">
+				    <img class="item-news__image" src="assets/images/Executive search.jpeg" alt="Project">
 				    <figcaption class="onHover__details">
 					    <div class="client">We are not in it for white board discussion only, we want to make an impact</div>
 					    <h3 class="title title--h5">Executive Search</h3>
@@ -100,7 +100,7 @@
 		    <!-- Project -->
 		    <figure class="item-project item-masonry js-block category-branding">
 			    <a href="boardconsulting.html" class="onHover">
-				    <img class="item-news__image" src="assets/images/board-consulting-thumpnail.jpg" alt="Project">
+				    <img class="item-news__image" src="assets/images/Board consulting.jpeg" alt="Project">
 				    <figcaption class="onHover__details">
 					    <div class="client">We aim to enthuse your board with those who bring with them a plethora of ideas</div>
 					    <h3 class="title title--h5">Board Consulting</h3>
@@ -112,7 +112,7 @@
 		    <!-- Post -->
 		    <figure class="item-project item-masonry js-block category-app">
 			    <a href="peergrowthresearchchronicle.html" class="onHover">
-				    <img class="item-news__image" src="assets/images/research-chronicle-thumpnail.jpg" alt="Project">
+				    <img class="item-news__image" src="assets/images/Peergrowth research chronicle.jpeg" alt="Project">
 				    <figcaption class="onHover__details">
 					    <div class="client">We look for creating benchmarks so that our clients value us as much as we value them</div>
 					    <h3 class="title title--h5">Peergrowth Research Chronicle</h3>
@@ -124,7 +124,7 @@
 		    <!-- Post -->
 		    <figure class="item-project item-masonry js-block category-design">
 			    <a href="traininganddevelop.html" class="onHover">
-				    <img class="item-news__image" src="assets/images/training-&-dev-thumpnail.jpg" alt="Project">
+				    <img class="item-news__image" src="assets/images/Training and development.jpeg" alt="Project">
 				    <figcaption class="onHover__details">
 					    <div class="client">Bespoke training solutions with an unparalleled focus is one of our core strenghts </div>
 					    <h3 class="title title--h5">Training and Development</h3>
