--- a/howwework.html
+++ b/howwework.html
@@ -74,7 +74,7 @@
 			    <!-- Slide 2 -->
 			    <div class="swiper-slide">
 				    <a class="swiper-slide__link" href="#">
-					    <div class="cover-slider" data-bg="assets/img/image_project_19.jpg"></div>
+					    <div class="cover-slider" data-bg="assets/images/connect.jpeg"></div>
 						<div class="swiper-slide__description">
 						    <h2 class="title _title--h2 js-text-wave">We connect</h2>
 						</div>
@@ -85,7 +85,7 @@
 			    <!-- Slide 3 -->
 			    <div class="swiper-slide">
 				    <a class="swiper-slide__link" href="#">
-					    <div class="cover-slider" data-bg="assets/img/image_project_08.jpg"></div>
+					    <div class="cover-slider" data-bg="assets/images/collaboration.jpeg"></div>
 						<div class="swiper-slide__description">
 						    <h2 class="title _title--h2 js-text-wave">We collaborate</h2>
 						</div>
@@ -96,7 +96,7 @@
 			    <!-- Slide 4 -->
 			    <div class="swiper-slide">
 				    <a class="swiper-slide__link" href="#">
-					    <div class="cover-slider" data-bg="assets/img/image_01.jpg"></div>
+					    <div class="cover-slider" data-bg="assets/images/brainstorm.jpeg"></div>
 						<div class="swiper-slide__description">
 						    <h2 class="title _title--h2 js-text-wave">We Brainstorm</h2>
 						</div>
@@ -107,7 +107,7 @@
 			    <!-- Slide 5 -->
 			    <div class="swiper-slide">
 				    <a class="swiper-slide__link" href="#">
-					    <div class="cover-slider" data-bg="assets/img/image_project_01.jpg"></div>
+					    <div class="cover-slider" data-bg="assets/images/relentless.jpeg"></div>
 						<div class="swiper-slide__description">
 						    <h2 class="title _title--h2 js-text-wave">We are relentness</h2>
 						</div>
@@ -118,7 +118,7 @@
 			    <!-- Slide 6-->
 			    <div class="swiper-slide">
 				    <a class="swiper-slide__link" href="#">
-					    <div class="cover-slider" data-bg="assets/img/image_project_08.jpg"></div>
+					    <div class="cover-slider" data-bg="assets/images/focussed.jpeg"></div>
 						<div class="swiper-slide__description">
 						    <h2 class="title _title--h2 js-text-wave">We are focussed</h2>
 						</div>
