images and some text

--- a/howwework.html
+++ b/howwework.html
@@ -109,7 +109,7 @@
 				    <a class="swiper-slide__link" href="#">
 					    <div class="cover-slider" data-bg="assets/images/relentless.jpeg"></div>
 						<div class="swiper-slide__description">
-						    <h2 class="title _title--h2 js-text-wave">We are relentness</h2>
+						    <h2 class="title _title--h2 js-text-wave">We are relentless</h2>
 						</div>
 					</a>
 				</div>
