--- a/about_video.html
+++ b/about_video.html
@@ -225,7 +225,15 @@
             </div>
         </div>
     </div><div style="padding-top:20px;"></div>
-    <header class="header-page header-fullscreen header-page--gutterBottom  jarallaxVideo" data-jarallax-video="mp4:assets/video/about2.mp4"></header>
+    <!-- <header class="header-page header-fullscreen header-page--gutterBottom  jarallaxVideo" data-jarallax-video="mp4:assets/video/about2.mp4"></header> -->
+    <div style="text-align:center;">
+    <video controls width="100%" height="500"
+       autoplay loop muted
+       poster="assets/images/connect.jpeg">
+  <source src="assets/video/about2.mp4" type="video/mp4">
+  <p>Your browser doesn't support HTML video. Here is a <a href="assets/video/about2.mp4">link to the video</a> instead.</p>
+</video>
+</div>
     <article class="caption-single container">
         <div class="row">
             <div class="col-12 col-lg-3">
