--- a/executive.html
+++ b/executive.html
@@ -33,6 +33,34 @@
     <!-- Styles -->
     <link rel="stylesheet" type="text/css" href="assets/styles/style.css" />
     <link rel="stylesheet" type="text/css" href="assets/demo/style-demo.css" />
+    <style>
+        .bar1, .bar2, .bar3 {
+          width: 35px;
+          height: 5px;
+          background-color: #333;
+          margin: 6px 0;
+          transition: 0.4s;
+          left: 0;
+
+        }
+
+        .change .bar1 {
+          -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+          transform: rotate(-45deg) translate(-9px, 6px);
+        }
+
+        .change .bar2 {opacity: 0;}
+
+        .change .bar3 {
+          -webkit-transform: rotate(45deg) translate(-8px, -8px);
+          transform: rotate(45deg) translate(-8px, -8px);
+        }
+    </style>
+    <script>
+        function myFunction(x) {
+          x.classList.toggle("change");
+        }
+    </script>
 </head>
 
 <body>
@@ -44,17 +72,21 @@
         </div>
     </div>
     <!-- Top -->
-    <nav class="navbar navbar-back">
+    <nav class="navbar">
         <div class="mr-auto logo-container">
-            <a class="btn-link" href="whatwedo.html"><i class="circle icon-left-open"></i></a>
-            <a class="logo-link" href="index.html">
-                <img class="logotype" src="assets/images/peerlogo.png" alt="ARTEM.">
-            </a>
+             <button class="hamburger zoom-cursor" type="button">
+                <div  onclick="myFunction(this)">
+                    <div class="bar1"></div>
+                    <div class="bar2"></div>
+                    <div class="bar3"></div>
+                </div>
+            </button>
         </div>
         <div class="ml-sm-auto">
-            <button class="hamburger zoom-cursor" type="button">
-                <span class="hamburger__inner"></span>
-            </button>
+            <a class="logo-link" href="index.html">
+                <img  class="logotype logotype__front" src="assets/images/peerlogo.png" alt="ARTEM.">
+                
+            </a>
         </div>
     </nav>
     <!-- /Top -->
