--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
         </div>
         <div class="ml-sm-auto">
             <a class="logo-link" href="index.html">
-                <img  class="logotype logotype__front" src="assets/images/peerlogo.png" alt="ARTEM.">
-                
+                <img  class="logotype" src="assets/images/peerlogo.png" alt="ARTEM.">    
             </a>
         </div>
     </nav>
@@ -166,7 +165,7 @@
                             <h6 class="title title--overhead"><span class="down-up"><span>Trusted management consulting firm, within search and advisory.&nbsp;<img style="width:50px;height:50px;" src="assets/images/Globalreach.png"></span></span></h6>
                             <h1 class="title title--display-1 js-text-wave">Global Reach
                             </h1>
-                            <a class="btn-link" href="contact.html"><span class="down-up"><span><button class="button">Lets Interact</button></span></span></a>
+                            <a class="btn-link" href="contact.html"><span class="down-up"><span><button class="button">Peergrowth Connect</button></span></span></a>
                         </div>
                     </div>
                     <!-- /Caption 1 -->
@@ -175,7 +174,7 @@
                         <div class="slider__item reveal">
                             <h6 class="title title--overhead"><span class="down-up"><span>Trusted management consulting firm, within search and advisory.&nbsp; <img style="width:50px;height:50px;" src="assets/images/Valuedriven.png"></span></span></h6>
                             <h1 class="title title--display-1 js-text-wave">Values driven</h1>
-                            <a class="btn-link" href="contact.html"><span class="down-up"><span><button class="button">Lets Interact</button></span></span></a>
+                            <a class="btn-link" href="contact.html"><span class="down-up"><span><button class="button">Peergrowth Connect</button></span></span></a>
                         </div>
                     </div>
                     <!-- /Caption 2 -->
@@ -184,7 +183,7 @@
                         <div class="slider__item reveal">
                             <h6 class="title title--overhead"><span class="down-up"><span>Trusted management consulting firm, within search and advisory.&nbsp;<img style="width:50px;height:50px;" src="assets/images/Research oriented.png"></span></span></h6>
                             <h1 class="title title--display-1 js-text-wave">Research Oriented</h1>
-                            <a class="btn-link" href="contact.html"><span class="down-up"><span><button class="button">Lets Interact</button></span></span></a>
+                            <a class="btn-link" href="contact.html"><span class="down-up"><span><button class="button">Peergrowth Connect</button></span></span></a>
                         </div>
                     </div>
                     <!-- /Caption 3 -->
@@ -193,7 +192,7 @@
                         <div class="slider__item reveal">
                             <h6 class="title title--overhead"><span class="down-up"><span>Trusted management consulting firm, within search and advisory.&nbsp;<img style="width:50px;height:50px;" src="assets/images/Research oriented.png"></span></span></h6>
                             <h1 style="font-size:50px;" class="title title--display-1 js-text-wave">Post Closure Engagement</h1>
-                            <a class="btn-link" href="contact.html"><span class="down-up"><span><button class="button">Lets Interact</button></span></span></a>
+                            <a class="btn-link" href="contact.html"><span class="down-up"><span><button class="button">Peergrowth Connect</button></span></span></a>
                         </div>
                     </div>
                     <!--Caption 4 -->
@@ -202,7 +201,7 @@
                         <div class="slider__item reveal">
                             <h6 class="title title--overhead"><span class="down-up"><span>Trusted management consulting firm, within search and advisory.&nbsp;<img style="width:50px;height:50px;" src="assets/images/Research oriented.png"></span></span></h6>
                             <h1 class="title title--display-1 js-text-wave">Customized Approach</h1>
-                            <a class="btn-link" href="contact.html"><span class="down-up"><span><button class="button">Lets Interact</button></span></span></a>
+                            <a class="btn-link" href="contact.html"><span class="down-up"><span><button class="button">Peergrowth Connect</button></span></span></a>
                         </div>
                     </div>
                     <!--/Caption 5 -->
@@ -215,17 +214,25 @@
     <div class="menu">
         <div class="menu-inner">
             <ul style="text-align:center;" class="menu-list">
-                <li><a class="menu-list__item" href="about_video.html"><span style="color:#1b254f">WHO</span> we are?</span></a></li>
-                <li><a class="menu-list__item" href="whatwedo.html"><span style="color:#1b254f">WHAT</span> we do?</span></a></li>
-                <li><a class="menu-list__item" href="howwework.html"><span style="color:#1b254f">HOW</span> we work?</span></a></li>
-                <li><a class="menu-list__item" href="speak.html"><span style="color:#1b254f">WHY</span> choose us?</span></a></li>
-                <li><a class="menu-list__item" href="contact.html"><span style="color:#1b254f">LETS</span> interact</span></a></li>
+                <li><a class="menu-list__item" href="about_video.html"><span style="color:#1b254f">Who</span> we are?</span></a></li>
+                <li><a class="menu-list__item" href="whatwedo.html"><span style="color:#1b254f">What</span> we do?</span></a></li>
+                <li><a class="menu-list__item" href="howwework.html"><span style="color:#1b254f">How</span> we work?</span></a></li>
+                <li><a class="menu-list__item" href="speak.html"><span style="color:#1b254f">Why</span> choose us?</span></a></li>
+                <li><a class="menu-list__item" href="contact.html"><span style="color:#1b254f">Peergrowth</span> connect</span></a></li>
             </ul>
         </div>
-        <div class="social">
-            <p class="social__link" href="#">We understand</p>
-            <p class="social__link" href="#">We interpret</p>
-            <p class="social__link" href="#">We execute</p>
+        <div class= "container">
+            <div class="row">
+                <div class="col-lg-4">
+                   <h4 class="title--h4 title--center"> We Understand</h4>
+                </div>
+                 <div class="col-lg-4">
+                     <h4 class="title--h4 title--center"> We Interpret</h4>
+                </div>
+                 <div class="col-lg-4">
+                     <h4 class="title--h4 title--center"> We Execute</h4>
+                </div>
+            </div>
         </div>
     </div>
     <div class="ef-background"></div>
