--- a/whatwedo.html
+++ b/whatwedo.html
@@ -71,13 +71,6 @@
 </head>
 <body>
     <!-- Preloader -->
-    <div class="preloader">
-	    <div class="preloader__wrap">
-	        <img class="preloader__logo" src="assets/images/peerlogo.png" alt="ARTEM">
-		    <div class="preloader__progress"><span></span></div>
-		</div>
-	</div>
-
     <!-- Top -->
 	<nav class="navbar">
         <div class="mr-auto logo-container">
@@ -91,7 +84,7 @@
         </div>
         <div class="ml-sm-auto">
             <a class="logo-link" href="index.html">
-                <img  class="logotype logotype__front" src="assets/images/peerlogo.png" alt="ARTEM.">
+                <img  class="logotype" src="assets/images/peerlogo.png" alt="ARTEM.">
                 
             </a>
         </div>
