--- a/about_video.html
+++ b/about_video.html
@@ -271,12 +271,12 @@
     </div>
     <div style="padding-top:20px;"></div>
     <!-- <header class="header-page header-fullscreen header-page--gutterBottom  jarallaxVideo" data-jarallax-video="mp4:assets/video/about2.mp4"></header> -->
-    <div style="text-align:center;">
+   <!--  <div style="text-align:center;">
         <video controls width="100%" height="500" autoplay loop muted poster="assets/images/connect.jpeg">
             <source src="assets/video/about2.mp4" type="video/mp4">
             <p>Your browser doesn't support HTML video. Here is a <a href="assets/video/about2.mp4">link to the video</a> instead.</p>
         </video>
-    </div>
+    </div> -->
     <article class="caption-single container">
         <div class="row">
             <div class="col-12 col-lg-3">
@@ -329,17 +329,17 @@
         <div class="container ">
             <div class="left-right">
                 <div class="row">
-                    <div class="col-md-4 box">
+                    <div class="col-lg-4 box">
                         <h1 class="heading-footer">Office</h1>
                         <p class="paragraph-footer">Peergrowth, Po Box No.-393343<br>
                             Dubai, United Arab Emirates</p>
                     </div>
-                    <div class="col-md-4 box">
+                    <div class="col-lg-4 box">
                         <h1 class="heading-footer">Get in touch</h1>
                         <p class="paragraph-footer">info@peergrowth.net<br>
                             +971 (0) 4 2400 448</p>
                     </div>
-                    <div class="col-md-4 box">
+                    <div class="col-lg-4 box">
                         <h1 class="heading-footer">Legal</h1>
                         <p class="paragraph-footer"><a href=" " style="text-decoration: none;color:#fff;">Privacy Policy</a><br>
                         <a href=" " style="text-decoration: none;color:#fff;">Terms and Condition</a></p>
