--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
     <!-- Intro -->
     <header class="header-page header-fullscreen overlay">
         <div class="wrap-bg">
-            <div class="js-image jarallax" data-image="assets/images/letsinteract.jpg"></div>
+            <div class="js-image jarallax" data-image="assets/images/letsinteractnew.jpg"></div>
         </div>
     </header>
     <!-- /Intro -->
@@ -236,33 +236,34 @@
                 </form>
             </div>
         </div>
-        <!-- /Form -->
-        <!-- Footer -->
-      <!--   <div class="row text-lg-center">
-            <ul class="col-12 col-md-12 col-lg-4 col-xl-4 listContact list-unstyled js-lines">
-                <li>
-                    <h6 class="title title--h6">OFFICE</h6>
-                </li>
-                <li>Peergrowth, Po Box No.-393343</li>
-                <li> Dubai, United Arab Emirates</li>
-            </ul>
-            <ul class="col-12 col-md-6 col-lg-4 col-xl-4 listContact list-unstyled js-lines">
-                <li>
-                    <h6 class="title title--h6">START A CONVERSATION</h6>
-                </li>
-                <li>info@peergrowth.net</li>
-                <li>+971 (0) 4 2400 448</li>
-            </ul>
-            <ul class="col-12 col-md-6 col-lg-4 col-xl-4 listContact list-unstyled js-lines">
-                <li>
-                    <h6 class="title title--h6">FOLLOW US</h6>
-                </li>
-                <li>Connect with me on <a class="link_decoration" href="">facebook</a></li>
-                <li><a class="link_decoration" href="">twitter</a> or <a class="link_decoration" href="">instagrem</a></li>
-            </ul>
-        </div> -->
-        <!-- /Footer -->
+         <!-- Footer -->
+
+    <!-- /Footer -->
+      
     </div>
+    <footer class="footer">
+        <div class="container ">
+            <div class="left-right">
+                <div class="row">
+                    <div class="col-lg-4 box">
+                        <h1 class="heading-footer">Office</h1>
+                        <p class="paragraph-footer">Peergrowth, Po Box No.-393343<br>
+                            Dubai, United Arab Emirates</p>
+                    </div>
+                    <div class="col-lg-4 box">
+                        <h1 class="heading-footer">Get in touch</h1>
+                        <p class="paragraph-footer">info@peergrowth.net<br>
+                            +971 (0) 4 2400 448</p>
+                    </div>
+                    <div class="col-lg-4 box">
+                        <h1 class="heading-footer">Legal</h1>
+                        <p class="paragraph-footer"><a href=" " style="text-decoration: none;color:#fff;">Privacy Policy</a><br>
+                        <a href=" " style="text-decoration: none;color:#fff;">Terms and Condition</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+</footer>
     <!-- /Contact -->
     <!-- Menu -->
     <!-- Menu -->
