--- a/speak.html
+++ b/speak.html
@@ -153,23 +153,52 @@
 		<!-- /Page nav -->
 	</section>
     <!-- /Intro -->
-
+      <footer class="footer">
+        <div class="container ">
+            <div class="left-right">
+                <div class="row">
+                    <div class="col-lg-4 box">
+                        <h1 class="heading-footer">Office</h1>
+                        <p class="paragraph-footer">Peergrowth, Po Box No.-393343<br>
+                            Dubai, United Arab Emirates</p>
+                    </div>
+                    <div class="col-lg-4 box">
+                        <h1 class="heading-footer">Get in touch</h1>
+                        <p class="paragraph-footer">info@peergrowth.net<br>
+                            +971 (0) 4 2400 448</p>
+                    </div>
+                    <div class="col-lg-4 box">
+                        <h1 class="heading-footer">Legal</h1>
+                        <p class="paragraph-footer"><a href=" " style="text-decoration: none;color:#fff;">Privacy Policy</a><br>
+                        <a href=" " style="text-decoration: none;color:#fff;">Terms and Condition</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+</footer>
 	<!-- Menu -->
-	<div class="menu">
+	 <div class="menu">
         <div class="menu-inner">
             <ul style="text-align:center;" class="menu-list">
-                <li><a class="menu-list__item" href="about_video.html"><span style="color:#1b254f">WHO</span> we are?</span></a></li>
-                <li><a class="menu-list__item" href="whatwedo.html"><span style="color:#1b254f">WHAT</span> we do?</span></a></li>
-                <li><a class="menu-list__item" href="howwework.html"><span style="color:#1b254f">HOW</span> we work?</span></a></li>
-                <li><a class="menu-list__item" href="speak.html"><span style="color:#1b254f">WHY</span> choose us?</span></a></li>
-                <li><a class="menu-list__item" href="contact.html"><span  style="color:#1b254f">LETS</span> interact</span></a></li>
-                
+                <li><a class="menu-list__item" href="about_video.html"><span style="color:#1b254f">Who</span> we are?</span></a></li>
+                <li><a class="menu-list__item" href="whatwedo.html"><span style="color:#1b254f">What</span> we do?</span></a></li>
+                <li><a class="menu-list__item" href="howwework.html"><span style="color:#1b254f">How</span> we work?</span></a></li>
+                <li><a class="menu-list__item" href="speak.html"><span style="color:#1b254f">Why</span> choose us?</span></a></li>
+                <li><a class="menu-list__item" href="contact.html"><span style="color:#1b254f">Peergrowth</span> connect</span></a></li>
             </ul>
         </div>
-        <div class="social">
-            <p class="social__link" href="#">We understand</p>
-            <p class="social__link" href="#">We interpret</p>
-            <p class="social__link" href="#">We execute</p>
+        <div class= "container">
+            <div class="row">
+                <div class="col-lg-4">
+                   <h4 class="title--h4 title--center"> We Understand</h4>
+                </div>
+                 <div class="col-lg-4">
+                     <h4 class="title--h4 title--center"> We Interpret</h4>
+                </div>
+                 <div class="col-lg-4">
+                     <h4 class="title--h4 title--center"> We Execute</h4>
+                </div>
+            </div>
         </div>
     </div>
     <div class="ef-background"></div>
