--- a/homenew.html
+++ b/homenew.html
@@ -140,7 +140,7 @@
 			        <div class="swiper-slide">
 					    <div class="slider__item">
 						    <div class="slider__wrap">
-			                    <h1 class="title title--display-1 js-text-wave">Title</h1>
+			                    <h1 class="title title--display-1 js-text-wave"> Make the right move</h1>
 						    </div>
 						</div>
 					</div>
